# KAYA-CLI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  fmt_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/app/: Cargo.toml
crates/app/src/: diagnostics.rs  lib.rs  logging.rs  main.rs  prompt.rs  runtime.rs
crates/app/src/runtime/: demo.rs  direct.rs  events.rs  files.rs  input.rs  mesh.rs  network.rs  presentation.rs  voice.rs  voice_media.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/commands/tests/: registry.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/direct/: Cargo.toml
crates/direct/src/: connector.rs  diagnostics.rs  errors.rs  framing.rs  lib.rs  listener.rs  peer_connection.rs  session.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/events/tests/: bus.rs
crates/files/: Cargo.toml
crates/files/src/: chunk.rs  errors.rs  hashing.rs  lib.rs  metadata.rs  progress.rs  session.rs  store.rs
crates/files/tests/: files.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: diagnostics.rs  discovery.rs  errors.rs  lib.rs  policy.rs  relay.rs  route.rs  scoring.rs  table.rs  ttl.rs
crates/mesh/tests/: mesh.rs
crates/peer/: Cargo.toml
crates/peer/src/: lib.rs
crates/peer/tests/: timeouts.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/persistence/tests/: config.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: hardening.rs
crates/relay/: Cargo.toml
crates/relay/src/: client.rs  diagnostics.rs  errors.rs  framing.rs  lib.rs  policy.rs  registry.rs  server.rs
crates/rooms/: Cargo.toml
crates/rooms/src/: lib.rs
crates/rooms/tests/: synchronization.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/sdk/tests/: sdk.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/security/tests/: security.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/transport/tests/: dedup.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  render.rs  state.rs  terminal.rs  theme.rs
crates/voice/: Cargo.toml
crates/voice/src/: audio.rs  codec.rs  config.rs  errors.rs  frame.rs  jitter.rs  lib.rs  state.rs
docs/: ARCHITECTURE.md  COMMANDS.md  DAEMON.md  DISTRIBUTION.md  EMBEDDING.md  EVENT_SYSTEM.md  FILE_TRANSFER.md  INSTALLATION.md  JURY_FAQ.md  LIMITATIONS.md  MESH.md  NGROK.md  PITCH.md  PROTOCOL.md  RELEASE.md  ROADMAP.md  ROADMAP_PUBLIC.md  SECURITY.md  STATE_MANAGEMENT.md  TECHNICAL_DEEP_DIVE.md  TESTING.md  TRANSPORT.md  UI_SYSTEM.md
docs/assets/screenshots/: file-transfer.md  mesh-route.md  secure-dm.md  tui-main.md
examples/: file-sender.rs  mesh-status.rs  room-bot.rs  secure-dm.rs  simple-node.rs
labs/: LAB-01-peer-discovery.md  LAB-02-room-sync.md  LAB-03-private-messaging.md  LAB-04-node-failure.md  LAB-06-room-membership.md  LAB-07-direct-messages.md  LAB-08-presence.md  LAB-09-history.md  LAB-10-identity-and-fingerprints.md  LAB-11-trust-store.md  LAB-12-encrypted-dms.md  LAB-13-blocked-peers.md  LAB-14-file-offer.md  LAB-15-file-transfer.md  LAB-16-encrypted-file-transfer.md  LAB-17-corrupted-chunk.md  LAB-18-blocked-peer-file-transfer.md  LAB-19-route-table.md  LAB-20-mesh-relay.md  LAB-21-multihop-dm.md  LAB-22-mesh-ttl-and-dedup.md  LAB-23-blocked-relay-policy.md  LAB-24-local-vs-relay.md  LAB-25-ngrok-relay.md  LAB-26-wan-secure-dm.md  LAB-27-relay-peer-disconnect.md  LAB-28-relay-security-metadata.md  LAB-29-direct-connect.md  LAB-30-tailscale-connect.md  LAB-31-direct-secure-dm.md  LAB-32-direct-file-transfer.md  LAB-33-live-audio-spaces.md  malformed-packets.md  multi-room-sync.md  packet-loss.md  peer-timeout.md  simultaneous-joins.md
presentation/: DEMO_SCRIPT.md  README.md  TALK_TRACK.md
scripts/: package-release.sh  package-ubuntu-22.04.sh  run-local-lab.sh  test-release-e2e.sh
tests/: README.md
