[workspace]
members = [
    "crates/app",
    "crates/commands",
    "crates/events",
    "crates/peer",
    "crates/persistence",
    "crates/protocol",
    "crates/rooms",
    "crates/security",
    "crates/shared",
    "crates/transport",
    "crates/ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KAYA CLI Contributors"]
repository = "https://github.com/natanielmatondo/KAYA-CLI"

[workspace.dependencies]
crossterm = "0.28"
ratatui = "0.29"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
