[package]
name = "kaya-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "kaya_app"
path = "src/lib.rs"

[[bin]]
name = "kaya"
path = "src/main.rs"

[dependencies]
kaya-commands = { path = "../commands" }
kaya-events = { path = "../events" }
kaya-files = { path = "../files" }
kaya-mesh = { path = "../mesh" }
kaya-peer = { path = "../peer" }
kaya-persistence = { path = "../persistence" }
kaya-protocol = { path = "../protocol" }
kaya-rooms = { path = "../rooms" }
kaya-security = { path = "../security" }
kaya-shared = { path = "../shared" }
kaya-transport = { path = "../transport" }
kaya-ui = { path = "../ui" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
