[package]
name = "kaya-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
kaya-commands = { path = "../commands" }
kaya-events = { path = "../events" }
kaya-files = { path = "../files" }
kaya-mesh = { path = "../mesh" }
kaya-peer = { path = "../peer" }
kaya-persistence = { path = "../persistence" }
kaya-protocol = { path = "../protocol" }
kaya-rooms = { path = "../rooms" }
kaya-security = { path = "../security" }
kaya-shared = { path = "../shared" }
kaya-transport = { path = "../transport" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"