[package]
name = "kaya-direct"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kaya-protocol = { path = "../protocol" }
kaya-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
