[package]
name = "kaya-files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kaya-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
