[package]
name = "kaya-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kaya-shared = { path = "../shared" }
kaya-voice = { path = "../voice" }
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
toml.workspace = true
uuid.workspace = true
