[package]
name = "kaya-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
kaya-protocol = { path = "../protocol" }
kaya-shared = { path = "../shared" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
