[package]
name = "kaya-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kaya-protocol = { path = "../protocol" }
kaya-shared = { path = "../shared" }
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
